--- a/hackathons.html
+++ b/hackathons.html
@@ -90,6 +90,14 @@ td {
 <table>
 <tr>
 <td>
+    <a id="a2k20" href="images/hackathons/a2k20.png">
+    <img src="images/hackathons/a2k20-s.png" alt="a2k20"></a><br>
+    a2k20: antipodian hackathon<br>
+    Январь 20 - 27, 2020<br>
+    Хобарт, Тасмания, Австралия<br>
+    17 разработчиков<br>
+    При финансировании <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+<td>
     <a id="u2k20" href="images/hackathons/u2k20.gif">
     <img src="images/hackathons/u2k20-s.gif" alt="u2k20-s"></a><br>
     u2k20: uckermark hackathon<br>
@@ -108,6 +116,7 @@ td {
     13 разработчиков<br>
     При финансировании <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.xplornet.ca">Xplornet</a>.
+<tr>
 <td>
     <a id="p2k19" href="images/hackathons/p2k19.gif">
     <img src="images/hackathons/p2k19-s.gif" alt="p2k19-s"></a><br>
@@ -119,7 +128,6 @@ td {
     и поддержке <a href="http://fmi.unibuc.ro">факультета математики и компьютерных наук
     бухарестского университета</a>.
     <br>
-<tr>
 <td>
     <a id="g2k19" href="images/hackathons/g2k19.gif">
     <img src="images/hackathons/g2k19-s.gif" alt="g2k19-s"></a><br>
@@ -139,6 +147,7 @@ td {
     При финансировании <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Kevin Lo и <a href="http://www.funtoro.com">MSI/FUNTORO</a>
     <br>
+<tr>
 <td>
     <a id="a2k19" href="images/hackathons/a2k19.gif">
     <img src="images/hackathons/a2k19-s.gif" alt="a2k19-s"></a><br>
@@ -149,7 +158,6 @@ td {
     При поддержке <a href="https://www.victoria.ac.nz">Victoria University of Wellington</a>
     и <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
     <br>
-<tr>
 <td>
     <a id="l2k18" href="images/hackathons/l2k18.jpg">
     <img src="images/hackathons/l2k18-s.gif" alt="l2k18-s"></a><br>
@@ -169,6 +177,7 @@ td {
     При поддержке Univerzita Jana Evangelisty Purkyn&#283;,
     финансировании Oracle и
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+<tr>
 <td>
     <a id="g2k18" href="images/hackathons/g2k18.gif">
     <img src="images/hackathons/g2k18-s.gif" alt="g2k18-s"></a><br>
@@ -178,7 +187,6 @@ td {
     39 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и Mitja Mu&#382;eni&#269;.
-<tr>
 <td>
     <a id="p2k18" href="images/hackathons/p2k18.gif">
     <img src="images/hackathons/p2k18-s.gif" alt="p2k18-s"></a><br>
@@ -197,6 +205,7 @@ td {
     19 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.otago.ac.nz">University of Otago</a>.
+<tr>
 <td>
     <a id="s2k17" href="images/hackathons/s2k17.gif">
     <img src="images/hackathons/s2k17-s.gif" alt="s2k17-s"></a><br>
@@ -206,7 +215,6 @@ td {
     10 разработчиков<br>
     При поддержке <a href="http://www.foretell.ca">ForeTell Technologies</a>
     и <a href="http://www.xplornet.ca">Xplornet</a>.
-<tr>
 <td>
     <a id="p2k17" href="images/hackathons/p2k17.gif">
     <img src="images/hackathons/p2k17-s.gif" alt="p2k17-s"></a><br>
@@ -226,6 +234,7 @@ td {
     38 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.utoronto.ca">University of Toronto</a>.
+<tr>
 <td>
     <a id="d2k17" href="images/hackathons/d2k17.gif">
     <img src="images/hackathons/d2k17-s.gif" alt="d2k17-s"></a><br>
@@ -235,7 +244,6 @@ td {
     24 разработчика<br>
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.genua.de">genua</a>.
-<tr>
 <td>
     <a id="noshirt" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -253,6 +261,7 @@ td {
     19 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и David Gwynne.	
+<tr>
 <td>
     <br>
     <br>
@@ -274,7 +283,6 @@ td {
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и оказанной помощи от <a href="http://www.enseeiht.fr">ENSEEIHT</a> и
     <a href="http://www.objectif-libre.com">Objectif Libre</a>.
-<tr>
 <td>
     <a id="b2k16" href="images/hackathons/b2k16.gif">
     <img src="images/hackathons/b2k16-s.gif" alt="b2k16-s"></a><br>
@@ -293,6 +301,7 @@ td {
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     with the help of
     <a href="http://www.cl.cam.ac.uk">Computer Laboratory, Cambridge</a>.
+<tr>
 <td>
     <a id="n2k16" href="images/hackathons/n2k16.gif">
     <img src="images/hackathons/n2k16-s.gif" alt="n2k16-s"></a><br>
@@ -303,7 +312,6 @@ td {
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and <a href="http://www.oracle.com">Oracle</a>, with the help of
     <a href="http://cuni.cz">Charles University</a>.
-<tr>
 <td>
     <a id="p2k16" href="images/hackathons/p2k16.gif">
     <img src="images/hackathons/p2k16-s.gif" alt="p2k16-s"></a><br>
@@ -322,6 +330,7 @@ td {
     19 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://esdenera.com">Esdenera Networks</a>.
+<tr>
 <td>
     <a id="u2k15" href="images/hackathons/u2k15.gif">
     <img src="images/hackathons/u2k15-s.gif" alt="u2k15-s"></a><br>
@@ -331,7 +340,6 @@ td {
     22 разработчика<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://www.in-berlin.de">IN-Berlin</a>.
-<tr>
 <td>
     <a id="l2k15" href="images/hackathons/l2k15.gif">
     <img src="images/hackathons/l2k15-s.gif" alt="l2k15-s"></a><br>
@@ -349,6 +357,7 @@ td {
     п. Насу, Тотиги, Япония<br>
     6 разработчиков<br>
     With the support of <a href="http://www.iij-ii.co.jp/en/">IIJ innovation institute</a>.
+<tr>
 <td>
     <a id="c2k15" href="images/hackathons/c2k15.gif">
     <img src="images/hackathons/c2k15-s.gif" alt="c2k15-s"></a><br>
@@ -358,7 +367,6 @@ td {
     45 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://sait.ca">SAIT</a>.
-<tr>
 <td>
     <a id="p2k15" href="images/hackathons/p2k15.gif">
     <img src="images/hackathons/p2k15-s.gif" alt="p2k15-s"></a><br>
@@ -377,6 +385,7 @@ td {
     21 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of David Gwynne.
+<tr>
 <td>
     <a id="g2k14" href="images/hackathons/g2k14.gif">
     <img src="images/hackathons/g2k14-s.gif" alt="g2k14-s"></a><br>
@@ -386,7 +395,6 @@ td {
     49 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of Mitja Mu&#382;eni&#269;.
-<tr>
 <td>
     <a id="m2k14" href="images/hackathons/m2k14.gif">
     <img src="images/hackathons/m2k14-s.gif" alt="m2k14-s"></a><br>
@@ -405,6 +413,7 @@ td {
     15 разработчиков<br>
     При финансировании <a href="http://www.foretell.ca">ForeTell Technologies</a>
     и поддержке <a href="http://www.otago.ac.nz">University of Otago</a>.
+<tr>
 <td>
     <a id="b2k13" href="images/hackathons/b2k13.gif">
     <img src="images/hackathons/b2k13-s.gif" alt="b2k13-s"></a><br>
@@ -414,7 +423,6 @@ td {
     21 разработчик<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://www.in-berlin.de">IN-Berlin</a>.
-<tr>
 <td>
     <a id="t2k13" href="images/hackathons/t2k13.jpg">
     <img src="images/hackathons/t2k13-s.gif" alt="t2k13-s"></a><br>
@@ -433,6 +441,7 @@ td {
     17 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://www.otago.ac.nz">University of Otago</a>.
+<tr>
 <td>
     <a id="c2k12" href="images/hackathons/c2k12.gif">
     <img src="images/hackathons/c2k12-s.gif" alt="c2k12-s"></a><br>
@@ -442,7 +451,6 @@ td {
     10 разработчиков<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     and with the support of <a href="http://www.uc.pt">University of Coimbra</a>.
-<tr>
 <td>
     <a id="p2k12" href="images/hackathons/p2k12.gif">
     <img src="images/hackathons/p2k12-s.gif" alt="p2k12-s"></a><br>
@@ -460,6 +468,7 @@ td {
     Штарнберг, Германия<br>
     23 разработчика<br>
     Funded by <a href="http://www.genua.de">genua</a>.
+<tr>
 <td>
     <a id="g2k12" href="images/hackathons/g2k12.gif">
     <img src="images/hackathons/g2k12-s.gif" alt="g2k12-s"></a><br>
@@ -468,7 +477,6 @@ td {
     Будапешт, Венгрия<br>
     41 разработчик<br>
     Funded by <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
-<tr>
 <td>
     <a id="r2k12" href="images/hackathons/r2k12.gif">
     <img src="images/hackathons/r2k12-s.gif" alt="r2k12-s"></a><br>
@@ -488,6 +496,7 @@ td {
     15 разработчиков<br>
     Funded by <a href="https://www.openbsd.org/donations.html">donations to
     the OpenBSD Project</a>.
+<tr>
 <td>
     <a id="a2k11" href="images/hackathons/a2k11.gif">
     <img src="images/hackathons/a2k11-s.gif" alt="a2k11-s"></a><br>
@@ -497,7 +506,6 @@ td {
     8 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.uc.pt">University of Coimbra</a>.
-<tr>
 <td>
     <a id="s2k11" href="images/hackathons/s2k11.jpg">
     <img src="images/hackathons/s2k11-s.gif" alt="s2k11-s"></a><br>
@@ -515,6 +523,7 @@ td {
     Эдмонтон, Альберта, Канада<br>
     36 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+<tr>
 <td>
     <a id="k2k11" href="images/hackathons/k2k11.jpg">
     <img src="images/hackathons/k2k11-s.gif" alt="k2k11-s"></a><br>
@@ -523,7 +532,6 @@ td {
     Hafnarfjordur, Iceland<br>
     15 разработчиков<br>
     При поддержке <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
-<tr>
 <td>
     <a id="p2k10" href="images/hackathons/p2k10.gif">
     <img src="images/hackathons/p2k10-s.gif" alt="p2k10-s"></a><br>
@@ -540,6 +548,7 @@ td {
     Сентябрь 19 - 25, 2010<br>
     Akiyamago, Sakae Mura, Nagano, Japan<br>
     19 разработчиков<br>
+<tr>
 <td>
     <a id="c2k10" href="images/hackathons/c2k10.gif">
     <img src="images/hackathons/c2k10-s.gif" alt="c2k10-s"></a><br>
@@ -549,7 +558,6 @@ td {
     46 разработчиков<br>
     При поддержке
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
-<tr>
 <td>
     <br>
     <br>
@@ -576,6 +584,7 @@ td {
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>
     и при поддержке <a href="http://www.uc.pt">University of Coimbra</a>.
+<tr>
 <td>
     <a id="p2k9" href="images/hackathons/p2k9.gif">
     <img src="images/hackathons/p2k9-s.gif" alt="p2k9-s"></a><br>
@@ -585,7 +594,6 @@ td {
     14 разоаботчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="f2k9" href="images/hackathons/f2k9.gif">
     <img src="images/hackathons/f2k9-s.gif" alt="f2k9-s"></a><br>
@@ -603,6 +611,7 @@ td {
     46 разработчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="n2k9" href="images/hackathons/n2k9.gif">
     <img src="images/hackathons/n2k9-s.gif" alt="n2k9-s"></a><br>
@@ -610,7 +619,6 @@ td {
     Январь 26 - 30, 2009<br>
     Базель, Швейцария<br>
     19 разработчиков<br>
-<tr>
 <td>
     <a id="h2k8" href="images/hackathons/h2k8.gif">
     <img src="images/hackathons/h2k8-s.gif" alt="h2k8-s"></a><br>
@@ -630,6 +638,7 @@ td {
     13 разработчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="c2k8" href="images/hackathons/c2k8.gif">
     <img src="images/hackathons/c2k8-s.gif" alt="c2k8-s"></a><br>
@@ -638,7 +647,6 @@ td {
     Эдмонтон, Аьберта<br>
     55 разработчиков<br>
     Организован <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
-<tr>
 <td>
     <a id="n2k8" href="images/hackathons/n2k8.gif">
     <img src="images/hackathons/n2k8-s.gif" alt="n2k8-s"></a><br>
@@ -658,6 +666,7 @@ td {
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>,
     а также при поддержке <a href="http://www.uc.pt">University of Coimbra</a>.
+<tr>
 <td>
     <a id="p2k7" href="images/hackathons/p2k7.gif">
     <img src="images/hackathons/p2k7-s.gif" alt="p2k7-s"></a><br>
@@ -667,7 +676,6 @@ td {
     13 разработчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="c2k7" href="images/hackathons/c2k7.gif">
     <img src="images/hackathons/c2k7-s.gif" alt="c2k7-s"></a><br>
@@ -686,6 +694,7 @@ td {
     14 разработчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="h2k6" href="images/hackathons/h2k6.gif">
     <img src="images/hackathons/h2k6-s.gif" alt="h2k6-s"></a><br>
@@ -696,7 +705,6 @@ td {
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>,
     а также при поддержке <a href="http://www.uc.pt">University of Coimbra</a>.
-<tr>
 <td>
     <a id="p2k6" href="images/hackathons/p2k6.gif">
     <img src="images/hackathons/p2k6-s.gif" alt="p2k6-s"></a><br>
@@ -713,6 +721,7 @@ td {
     Август 28 - Sep 1, 2006<br>
     Замок Kransberg, Германия<br>
     14 разработчиков<br>
+<tr>
 <td>
     <a id="r2k6" href="images/hackathons/r2k6.gif">
     <img src="images/hackathons/r2k6-s.gif" alt="r2k6-s"></a><br>
@@ -721,7 +730,6 @@ td {
     Гамбург, Германия<br>
     6 разработчиков<br>
     При поддержке Henning Brauer.
-<tr>
 <td>
     <a id="c2k6" href="images/hackathons/c2k6.gif">
     <img src="images/hackathons/c2k6-s.gif" alt="c2k6-s"></a><br>
@@ -740,6 +748,7 @@ td {
     12 разработчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="c2k5" href="images/hackathons/c2k5.gif">
     <img src="images/hackathons/c2k5-s.gif" alt="c2k5-s"></a><br>
@@ -749,7 +758,6 @@ td {
     60 разработчиков<br>
     Организован благодаря <a href="https://www.openbsd.org/donations.html">
     пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="c2k4" href="images/hackathons/c2k4.gif">
     <img src="images/hackathons/c2k4-s.gif" alt="c2k4-s"></a><br>
@@ -767,6 +775,7 @@ td {
     Сишелт, Британская Колумбия<br>
     12 разработчиков<br>
     При поддержке Ryan McBride.
+<tr>
 <td>
     <a id="c2k3" href="images/hackathons/c2k3.gif">
     <img src="images/hackathons/c2k3-s.gif" alt="c2k3-s"></a><br>
@@ -776,7 +785,6 @@ td {
     51 разработчик<br>
     Основан <a href="https://www.nlnetlabs.nl">NLnet</a>
     (после того, как DARPA прекратила оказывать поддержку).
-<tr>
 <td>
     <a id="c2k2" href="images/hackathons/c2k2.gif">
     <img src="images/hackathons/c2k2-s.gif" alt="c2k2-s"></a><br>
@@ -792,6 +800,7 @@ td {
     Август 17 - 20, 2001<br>
     Вашингтон, округ Колумбия
     Организован DARPA при поддержке <a href="http://www.usenix.org">USENIX</a>.
+<tr>
 <td>
     <a id="c2k1" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -800,7 +809,6 @@ td {
     Кембридж, Массачусетс<br>    
     25 разработчиков<br>
     Организован DARPA при поддержке <a href="http://www.mit.edu">MIT</a>.
-<tr>
 <td>
     <a id="c2k" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -827,7 +835,7 @@ pf2k4, c2k4, and c2k5 созданы David Woloschuk.<br>
 n2k10 создана Theo de Raadt, усовершенствована Ty Semaka.<br>
 c2k10, j2k10, and p2k10 создана Damon Mlekuz.<br>
 k2k11 создана Bret Lambert.<br>
-r2k12, g2k12, n2k12, b2k13, n2k14, m2k14, g2k14, s2k15, c2k15, l2k15, p2k16, g2k16, b2k16, a2k17, d2k17, p2k17, s2k17, a2k18, p2k18, g2k18, a2k19, t2k19, g2k19, p2k19, e2k19 созданы Markus Hall.<br>
+r2k12, g2k12, n2k12, b2k13, n2k14, m2k14, g2k14, s2k15, c2k15, l2k15, p2k16, g2k16, b2k16, a2k17, d2k17, p2k17, s2k17, a2k18, p2k18, g2k18, a2k19, t2k19, g2k19, p2k19, e2k19, a2k20 созданы Markus Hall.<br>
 p2k12 создана Bidon Mickael aka Mogmi.<br>
 c2k12 создана Theo de Raadt.<br>
 n2k13 купленная футболка с добавленной надписью.<br>
