[1.148] sync - hackathon.html

--- a/hackathons.html
+++ b/hackathons.html
@@ -96,7 +96,8 @@ td {
     Январь 20 - 27, 2020<br>
     Хобарт, Тасмания, Австралия<br>
     17 разработчиков<br>
-    При финансировании <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+    При финансировании <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
+    и поддержке Росса Л. Ричардсона.
 <td>
     <a id="u2k20" href="images/hackathons/u2k20.gif">
     <img src="images/hackathons/u2k20-s.gif" alt="u2k20-s"></a><br>
