[1.415] sync - openntpd/portable.html

--- a/openntpd/portable.html
+++ b/openntpd/portable.html
@@ -48,7 +48,7 @@
 эти безопасные и простые API.
 
 <p>
-На момент написания, портированная версия OpenNTPD собиралась и
+На момент написания портированная версия OpenNTPD собиралась и
 работала на системах:
 
 <ul>
