--- a/openiked/index.html
+++ b/openiked/index.html
@@ -3,9 +3,9 @@
     <meta charset=utf-8>
     <title>OpenIKED</title>
     <meta name="description" content="the main OpenIKED page">
-    <link rel="shortcut icon" href="../favicon.ico" TYPE="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" TYPE="image/x-icon">
     <link rel="canonical" href="https://www.openiked.org">
-    <link rel="stylesheet" href="../openbsd.css">
+    <link rel="stylesheet" href="openbsd.css">
 
 <table id="project-main" class="not-openbsd">
   <tr class="align-top">
